--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -956,7 +956,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 49,
       "metadata": {
         "id": "nCXL9Cz1xYaV"
       },
@@ -976,7 +976,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 50,
       "metadata": {
         "id": "9y3E0YWExYaV"
       },
@@ -997,7 +997,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 51,
       "metadata": {
         "id": "i7SkWPpnxYaW",
         "outputId": "28e82563-edba-4b41-acad-ec27e5ba134f"
@@ -1016,7 +1016,7 @@
         }
       ],
       "source": [
-        "query_keywords = [] # add your keywords\n",
+        "query_keywords = ['inequalities'] # add your keywords\n",
         "for i, doc in enumerate(retrieved_docs[:1]):\n",
         "    snippet = doc.page_content[:200]\n",
         "    highlighted = highlight_keywords(snippet, query_keywords)\n",
